--- a/app/src/main/res/xml/pref_main.xml
+++ b/app/src/main/res/xml/pref_main.xml
@@ -14,6 +14,11 @@
         android:title="Web服务"
         app:iconSpaceReserved="false" />
 
+    <androidx.preference.Preference
+        android:key="bookSourceManage"
+        android:title="书源管理"
+        app:iconSpaceReserved="false" />
+
     <io.legado.app.lib.theme.prefs.ATEPreferenceCategory
         android:title="设置"
         app:iconSpaceReserved="false">
