--- a/app/src/main/res/layout/activity_source_debug.xml
+++ b/app/src/main/res/layout/activity_source_debug.xml
@@ -10,9 +10,8 @@
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:fitStatusBar="false"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="书源编辑" />
+        app:title="@string/debug_source" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
