--- a/app/src/main/res/layout/item_source_debug.xml
+++ b/app/src/main/res/layout/item_source_debug.xml
@@ -2,4 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/text_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:textIsSelectable="true"
+    android:autoLink="web" />
