--- a/app/src/main/res/xml/pref_main.xml
+++ b/app/src/main/res/xml/pref_main.xml
@@ -7,6 +7,11 @@
         android:title="书源管理"
         app:iconSpaceReserved="false" />
 
+    <androidx.preference.Preference
+        android:key="replaceManage"
+        android:title="替换净化"
+        app:iconSpaceReserved="false" />
+
     <io.legado.app.lib.theme.prefs.ATESwitchPreference
         android:defaultValue="false"
         android:key="isNightTheme"
