--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -24,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:singleLine="true"
         android:text="@string/app_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_cover"
@@ -48,6 +49,7 @@
                 android:id="@+id/tv_kind"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="6dp"
                 android:singleLine="true"
                 android:text="@string/app_name" />
 
@@ -55,6 +57,7 @@
                 android:id="@+id/tv_kind_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="6dp"
                 android:singleLine="true"
                 android:text="@string/app_name" />
 
@@ -62,6 +65,7 @@
                 android:id="@+id/tv_kind_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="6dp"
                 android:singleLine="true"
                 android:text="@string/app_name" />
 
