--- a/app/src/main/res/layout/page_view.xml
+++ b/app/src/main/res/layout/page_view.xml
@@ -16,6 +16,7 @@
 
 
     <FrameLayout
+            android:id="@+id/content_panel"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
