--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -19,6 +19,14 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="UnusedAttribute" />
 
+    <io.legado.app.ui.widget.BadgeView
+        android:id="@+id/bv_originCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="0dp"
@@ -27,7 +35,7 @@
         android:singleLine="true"
         android:text="@string/app_name"
         android:textColor="@color/tv_text_default"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/bv_originCount"
         app:layout_constraintStart_toEndOf="@+id/iv_cover"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +54,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lines="1"
-            android:drawableLeft="@drawable/ic_author"
+            android:drawableStart="@drawable/ic_author"
             android:text="@string/author"
             android:textColor="@color/tv_text_default"
             android:textSize="12sp" />
