--- a/app/src/main/res/layout/view_title_bar.xml
+++ b/app/src/main/res/layout/view_title_bar.xml
@@ -15,4 +15,10 @@
             android:imeOptions="actionSearch"
             app:defaultQueryHint="搜索" />
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
 </androidx.appcompat.widget.Toolbar>
