--- a/app/src/main/res/layout/activity_book_source.xml
+++ b/app/src/main/res/layout/activity_book_source.xml
@@ -11,16 +11,17 @@
             android:layout_height="wrap_content"
             app:contentInsetStartWithNavigation="0dp"
             app:displayHomeAsUp="true"
-            app:title="@string/book_source"/>
+            app:title="@string/book_source"
+            app:contentLayout="@layout/view_search"/>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <io.legado.app.ui.widget.recycler.scroller.FastScrollRecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
     </FrameLayout>
 
