--- a/app/src/main/res/layout/activity_source_debug.xml
+++ b/app/src/main/res/layout/activity_source_debug.xml
@@ -10,6 +10,7 @@
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:contentLayout="@layout/view_search"
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/debug_source" />
 
