--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,6 +14,7 @@
         <attr name="contentInsetStartWithNavigation"/>
         <attr name="contentInsetLeft"/>
         <attr name="contentInsetRight"/>
+        <attr name="contentLayout" format="reference"/>
         <attr name="attachToActivity" format="boolean"/>
         <attr name="displayHomeAsUp" format="boolean"/>
         <attr name="navigationIcon" format="reference"/>
