--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -5,7 +5,7 @@
     android:descendantFocusability="blocksDescendants">
 
     <io.legado.app.ui.widget.recycler.scroller.FastScrollRecyclerView
-        android:id="@+id/rv_list"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never" />
