--- a/app/src/main/res/layout/activity_book_info_edit.xml
+++ b/app/src/main/res/layout/activity_book_info_edit.xml
@@ -28,7 +28,7 @@
                 android:orientation="horizontal"
                 android:padding="5dp">
 
-                <com.kunfei.bookshelf.widget.CoverImageView
+                <io.legado.app.ui.widget.image.CoverImageView
                     android:id="@+id/iv_cover"
                     android:layout_width="90dp"
                     android:layout_height="126dp"
@@ -42,47 +42,47 @@
                     android:orientation="vertical"
                     android:padding="5dp">
 
-                    <com.kunfei.bookshelf.widget.views.ATETextInputLayout
+                    <io.legado.app.lib.theme.view.ATETextInputLayout
                         android:id="@+id/til_book_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/book_name">
 
-                        <com.kunfei.bookshelf.widget.views.ATEEditText
+                        <io.legado.app.lib.theme.view.ATEEditText
                             android:id="@+id/tie_book_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:singleLine="true" />
-                    </com.kunfei.bookshelf.widget.views.ATETextInputLayout>
+                    </io.legado.app.lib.theme.view.ATETextInputLayout>
 
-                    <com.kunfei.bookshelf.widget.views.ATETextInputLayout
+                    <io.legado.app.lib.theme.view.ATETextInputLayout
                         android:id="@+id/til_book_author"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/author">
 
-                        <com.kunfei.bookshelf.widget.views.ATEEditText
+                        <io.legado.app.lib.theme.view.ATEEditText
                             android:id="@+id/tie_book_author"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:singleLine="true" />
-                    </com.kunfei.bookshelf.widget.views.ATETextInputLayout>
+                    </io.legado.app.lib.theme.view.ATETextInputLayout>
 
                 </LinearLayout>
             </LinearLayout>
 
-            <com.kunfei.bookshelf.widget.views.ATETextInputLayout
+            <io.legado.app.lib.theme.view.ATETextInputLayout
                 android:id="@+id/til_cover_url"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:hint="@string/cover_path">
 
-                <com.kunfei.bookshelf.widget.views.ATEEditText
+                <io.legado.app.lib.theme.view.ATEEditText
                     android:id="@+id/tie_cover_url"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-            </com.kunfei.bookshelf.widget.views.ATETextInputLayout>
+            </io.legado.app.lib.theme.view.ATETextInputLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -91,14 +91,14 @@
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp">
 
-                <com.kunfei.bookshelf.widget.views.ATEStrokeTextView
+                <io.legado.app.lib.theme.view.ATEStrokeTextView
                     android:id="@+id/tv_select_cover"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="5dp"
                     android:text="选择本地图片" />
 
-                <com.kunfei.bookshelf.widget.views.ATEStrokeTextView
+                <io.legado.app.lib.theme.view.ATEStrokeTextView
                     android:id="@+id/tv_change_cover"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -107,7 +107,7 @@
                     android:text="封面换源"
                     tools:ignore="RtlHardcoded" />
 
-                <com.kunfei.bookshelf.widget.views.ATEStrokeTextView
+                <io.legado.app.lib.theme.view.ATEStrokeTextView
                     android:id="@+id/tv_refresh_cover"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -118,18 +118,18 @@
 
             </LinearLayout>
 
-            <com.kunfei.bookshelf.widget.views.ATETextInputLayout
+            <io.legado.app.lib.theme.view.ATETextInputLayout
                 android:id="@+id/til_book_jj"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:hint="@string/book_intro">
 
-                <com.kunfei.bookshelf.widget.views.ATEEditText
-                    android:id="@+id/tie_book_jj"
+                <io.legado.app.lib.theme.view.ATEEditText
+                    android:id="@+id/tie_book_intro"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-            </com.kunfei.bookshelf.widget.views.ATETextInputLayout>
+            </io.legado.app.lib.theme.view.ATETextInputLayout>
 
         </LinearLayout>
     </ScrollView>
